# rocketmq-client-nodejs-addon

./: .coderabbit.yaml  .eslintrc.js  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  TESTING.md  build.sh  compose.yaml  eslint.config.js  index.d.ts  package.json  rocketmq-v4.yaml  rocketmq-v5.yaml  tsconfig.json  vitest.config.mjs
.github/workflows/: build.yml
example/: common.js  common.ts  producer.js  producer.ts  push_consumer.js  push_consumer.ts  status_behavior.js  status_behavior.ts
lib/: addon_data.h  binding.js  common_utils.cpp  common_utils.h  consumer_ack.cpp  consumer_ack.h  producer.cpp  producer.d.ts  producer.h  producer.js  push_consumer.cpp  push_consumer.d.ts  push_consumer.h  push_consumer.js  rocketmq.cpp
src/: binding.ts  constants.ts  consumer.ts  consumer_ack.cpp  index.ts  producer.cpp  producer.ts  push_consumer.cpp  push_consumer.h  rocketmq.cpp
test/: Dockerfile  consumer.js  consumer.test.js  consumer.test.ts  consumer_ack.test.js  consumer_ack.test.ts  package.json  producer.js  producer.test.js  producer.test.ts  push_consumer.test.js  race_condition.test.ts  rocketmq_init.test.js  rocketmq_init.test.ts  sigabrt_fix.test.ts
test/helpers/: binding.js  binding.ts
test/mocks/rocketmq/include/: ClientRPCHook.h  DefaultMQProducer.h  DefaultMQPushConsumer.h  LoggerConfig.h  MQException.h  MQMessage.h  MQMessageListener.h  SendCallback.h
test/mocks/rocketmq/src/: rocketmq_stub.cpp
